# garf

./: .env.example  .gitignore  docker-compose.yml  main.py  plan_v0.md  plan_v1.md  plan_v2.md  pyproject.toml
garf/: client.py  config.py  db.py  models.py  sync.py
garf/sources/: __init__.py  base.py  calories.py  heart_rate.py  sleep.py  training_state.py  workouts.py
grafana/provisioning/datasources/: garf.yml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_training.py
tests/: test_db.py  test_real_sync.py  test_sync.py  test_transforms.py
tests/fixtures/: activities.json  heart_rates.json  sleep.json  stats.json  training_status.json
